PROG Fixed the previously added and reverted Fedora 21 support Ref #2202
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6207 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/3rdParty/Makefile
+++ b/isis/3rdParty/Makefile
@@ -82,3 +82,10 @@ clean:
 	  fi \
 	done;
 	
+#----------------------------------------------------------------------------
+# Use to see values of variables
+#  Example: make print-HOST_OS
+#  Will print the make variable HOST_OS
+#----------------------------------------------------------------------------
+print-%  :
+	@echo '$* = $($*)'
