Added Ra/Dec and Body Fixed Coordinates to phocube. References #2277
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6269 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/phocube/tsts/allbands/Makefile
+++ b/isis/src/base/apps/phocube/tsts/allbands/Makefile
@@ -27,4 +27,6 @@ commands:
 	  subspacecraftgroundazimuth=true \
 	  subsolargroundazimuth=true \
 	  morphology=true \
-	  albedo=true > /dev/null;  
+	  albedo=true \
+	  radec=true \
+	  bodyfixed=true> /dev/null;  
