When an invalid file is entered thmproc will display an error message instead of crashing. Fixes #1025.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6271 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thmproc/tsts/errors/Makefile
+++ b/isis/src/odyssey/apps/thmproc/tsts/errors/Makefile
@@ -11,4 +11,45 @@ commands:
 	TO=$(OUTPUT)/V01001002EDR \
 	INGESTION=no \
 	MAPPING=no 2>> $(OUTPUT)/error.txt > /dev/null;
+	$(RM) $(OUTPUT)/input_* ;
+	echo -e "Error Test: Nonexistent PCK file" >> $(OUTPUT)/error.txt;
+	$(CP) $(INPUT)/V01001002EDR.QUB $(OUTPUT)/input_V01001002EDR.QUB; \
+	$(APPNAME) FROM=$(OUTPUT)/input_V01001002EDR.QUB \
+	TO=$(OUTPUT)/V01001002EDR \
+	INGESTION=yes \
+	MAPPING=no \
+	PCK=dummy.pck 2>> $(OUTPUT)/error.txt > /dev/null;
+	$(RM) $(OUTPUT)/input_*
+	echo -e "Error Test: Nonexistent CK file" >> $(OUTPUT)/error.txt;
+	$(CP) $(INPUT)/V01001002EDR.QUB $(OUTPUT)/input_V01001002EDR.QUB; \
+        $(APPNAME) FROM=$(OUTPUT)/input_V01001002EDR.QUB \
+        TO=$(OUTPUT)/V01001002EDR \
+        INGESTION=yes \
+        MAPPING=no \
+        CK=dummy.ck 2>> $(OUTPUT)/error.txt > /dev/null;
+	$(RM) $(OUTPUT)/input_*
+	echo -e "Error Test: Nonexistent SPK file" >> $(OUTPUT)/error.txt;
+	$(CP) $(INPUT)/V01001002EDR.QUB $(OUTPUT)/input_V01001002EDR.QUB; \
+        $(APPNAME) FROM=$(OUTPUT)/input_V01001002EDR.QUB \
+        TO=$(OUTPUT)/V01001002EDR \
+        INGESTION=yes \
+        MAPPING=no \
+        SPK=dummy.spk 2>> $(OUTPUT)/error.txt > /dev/null;
+	$(RM) $(OUTPUT)/input_*
+	echo -e "Error Test: Nonexistent MAP file" >> $(OUTPUT)/error.txt;
+	$(CP) $(INPUT)/V01001002EDR.QUB $(OUTPUT)/input_V01001002EDR.QUB; \
+        $(APPNAME) FROM=$(OUTPUT)/input_V01001002EDR.QUB \
+        TO=$(OUTPUT)/V01001002EDR \
+        INGESTION=yes \
+        MAPPING=yes \
+        MAP=dummy.ck 2>> $(OUTPUT)/error.txt > /dev/null;
+	$(RM) $(OUTPUT)/input_*
+	echo -e "Error Test: Nonexistent MODEL file" >> $(OUTPUT)/error.txt;
+	$(CP) $(INPUT)/V01001002EDR.QUB $(OUTPUT)/input_V01001002EDR.QUB; \
+        $(APPNAME) FROM=$(OUTPUT)/input_V01001002EDR.QUB \
+        TO=$(OUTPUT)/V01001002EDR \
+        INGESTION=yes \
+        MAPPING=no \
+        SHAPE=USER \
+        MODEL=dummy.ck 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(RM) $(OUTPUT)/input_*
