gradient provides ability to calculate gradients approximately or exactly (default approximate). Fixes #1741.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6273 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/gradient/tsts/roberts/Makefile
+++ b/isis/src/base/apps/gradient/tsts/roberts/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/isisTruth.cub \
 	  to=$(OUTPUT)/gradTruth2.cub \
-	  gradType=Roberts > /dev/null;
+	  gradType=Roberts method=APPROXIMATE > /dev/null;
