--- a/isis/src/base/apps/gradient/tsts/sobel/Makefile
+++ b/isis/src/base/apps/gradient/tsts/sobel/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/isisTruth.cub \
 	  to=$(OUTPUT)/gradTruth1.cub \
-	  gradType=Sobel > /dev/null;
+	  gradType=Sobel method=APPROXIMATE > /dev/null;
