PROG fixed isisui gradient test. References #1741.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6278 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isisui/tsts/gradient/Makefile
+++ b/isis/src/base/apps/isisui/tsts/gradient/Makefile
@@ -7,4 +7,5 @@ commands:
 	$(APPNAME) gradient \
 	  from=$(INPUT)/isisTruth.cub \
 	  to=isisTruthSample.cub \
-	  gradtype=sobel  > $(OUTPUT)/standardOutTruth2.pvl;
+	  gradtype=sobel \
+	  method=approximate  > $(OUTPUT)/standardOutTruth2.pvl;
