Bug fixed in appTest in application cnetnewradii. Fixes #2263
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6287 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetnewradii/tsts/errors/Makefile
+++ b/isis/src/control/apps/cnetnewradii/tsts/errors/Makefile
@@ -1,15 +1,20 @@
-.IGNORE:
-
+# This test will print errors thrown by cnetnewradii
+# There are four errors that can be thrown by the application. This tests one.
 APPNAME = cnetnewradii
 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) CNET=$(INPUT)/AS15_Rev4_Reg_wLOLA.edited.net \
+	echo -e "Valid Radii Test: " > $(OUTPUT)/error1.txt;
+	if [ `$(APPNAME) \
+	  CNET=$(INPUT)/AS15_Rev4_Reg_wLOLA.edited.net \
 	  MODEL=$(INPUT)/ldem_8ppd_LATneg15to0_LON140to180.cub \
-	  ONET=$(OUTPUT)/outputcnet.pvl getlatlon=adjusted \
+	  ONET=$(OUTPUT)/outputcnet.pvl \
+	  getlatlon=adjusted \
 	  errors=errors.pvl \
-	  2>> $(OUTPUT)/error1.txt > /dev/null;
-	cat $(OUTPUT)/error1.txt | sed s+/usgs.*errors/++g > $(OUTPUT)/error.txt;
-	rm -f $(OUTPUT)/error1.txt;
-	rm -f $(OUTPUT)/outputcnet.pvl;
+	  2>> $(OUTPUT)/error1.txt` ]; then \
+	  true; \
+	fi;
+	$(SED) 's+/.*errors/++' $(OUTPUT)/error1.txt > $(OUTPUT)/error.txt;
+	$(RM) $(OUTPUT)/error1.txt;
+	$(RM) $(OUTPUT)/outputcnet.pvl;
