IGNOREALL in cnetedit now acts as documented. When (and only when) IGNOREALL is true and a reference measure is removed, the entire point is removed. Fixes #2238
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6294 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetedit/tsts/checkValid/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/checkValid/Makefile
@@ -3,6 +3,7 @@ APPNAME = cnetedit
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
+# normal test
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
 	ONET=$(OUTPUT)/cnet.net \
@@ -11,4 +12,16 @@ commands:
        	FROMLIST=$(OUTPUT)/list.lis \
 	DEFFILE=$(INPUT)/deffile.def \
 	RETAIN_REFERENCE=yes > /dev/null;
+
+# test with IGNOREALL=true
+#	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
+	$(APPNAME) CNET=$(INPUT)/cnet.net \
+	ONET=$(OUTPUT)/cnet2.net \
+	LOG=$(OUTPUT)/log2.txt \
+	CHECKVALID=yes \
+	IGNOREALL=true \
+       	FROMLIST=$(OUTPUT)/list.lis \
+	DEFFILE=$(INPUT)/deffile.def > /dev/null;
+
+# Cleanup
 	$(RM) $(OUTPUT)/list.lis;
