PROG Fixed broken cnetedit fix so that reference measures are correctly deleted when in a MEASURELIST and DELETE=YES. Also updated documentation and added another test. Fixes #2238
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6311 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetedit/tsts/measurelist/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/measurelist/Makefile
@@ -14,7 +14,7 @@ commands:
 	DELETE=no \
 	ONET=$(OUTPUT)/cnet.net > /dev/null;
 
-# test with IGNOREALL = true, DELETE=yes measure that is a reference for a non-ignored point
+# test with IGNOREALL = true, DELETE=no measure that is a reference for a non-ignored point
 	$(CAT) $(INPUT)/bad_measures2.lis | $(SED) "s#,#,$(INPUT)/#" \
 		> $(OUTPUT)/list2.lis;
 
@@ -24,6 +24,15 @@ commands:
 	IGNOREALL=true \
 	DELETE=no \
 	ONET=$(OUTPUT)/cnet2.net > /dev/null;
+
+# test with DELETE=yes
+	$(CAT) $(INPUT)/bad_measures.lis | $(SED) "s#,#,$(INPUT)/#" \
+		> $(OUTPUT)/list.lis;
+
+	$(APPNAME) CNET=$(INPUT)/cnet.net \
+	LOG=$(OUTPUT)/log3.txt \
+	MEASURELIST=$(OUTPUT)/list.lis \
+	ONET=$(OUTPUT)/cnet3.net > /dev/null;
 
 # Cleanup
 	$(RM) $(OUTPUT)/list.lis;
