Changed ContaminationEvent keyword names to EmpiricalCorrection for Messenger's mdiscal. Also added the ability for users to turn this correction off and added the keyword to the output PDS product for mdis2pds. In addition, fixed a bug in mdiscal so that it now will perform linearity, absolute coefficient, and smear corrections even when flat field correction is turned off. Increased the ProductId version and software versions for these programs also. Fixes #2332, #2333, #2338
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6372 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdis2pds/tsts/orbit/Makefile
+++ b/isis/src/messenger/apps/mdis2pds/tsts/orbit/Makefile
@@ -1,3 +1,11 @@
+# Orbit tests for mdis2pds
+#
+# defaults to type=automatic, 
+#             min = -1, 
+#             max =  1, 
+#             minper=0, 
+#             maxper=100, 
+#             bits=32
 APPNAME = mdis2pds
 
 output.cub.TOLERANCE = 0.0000000002
