--- a/isis/src/messenger/apps/mdiscal/tsts/pxlbinnonzero/Makefile
+++ b/isis/src/messenger/apps/mdiscal/tsts/pxlbinnonzero/Makefile
@@ -6,10 +6,12 @@ nonZeroPxlBin.pvl.IGNORELINES = ProcessDate
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/EN0001427180M.cub \
+	$(APPNAME) \
+	FROM=$(INPUT)/EN0001427180M.cub \
 	TO=$(OUTPUT)/nonZeroPxlBin.cub \
 	> /dev/null;
 
-	catlab FROM=$(OUTPUT)/nonZeroPxlBin.cub \
+	catlab \
+	FROM=$(OUTPUT)/nonZeroPxlBin.cub \
 	TO=$(OUTPUT)/nonZeroPxlBin.pvl \
 	> /dev/null; 
