--- a/isis/src/messenger/apps/mdis2pds/tsts/minMaxPercent/Makefile
+++ b/isis/src/messenger/apps/mdis2pds/tsts/minMaxPercent/Makefile
@@ -1,11 +1,9 @@
-# Tests mdis2pds with user-defined (manual) stretch of -1 to 1.
+# Tests mdis2pds with user-defined min/max percentages
 #
-# parameters  type=manual, 
-#             min = -1, 
-#             max =  1, 
-# defaults to minper=0, 
-#             maxper=100, 
-#             bits=32
+# parameters  type = auto, 
+#             minper = 25, 
+#             maxper = 75, 
+# uses defaults for bits (32)
 APPNAME = mdis2pds
 
 output.cub.TOLERANCE = 0.0000000002
@@ -16,8 +14,10 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/EN0108840044M.cal.cub \
-	to=$(OUTPUT)/output type=manual \
-	min=-1.0 max=1.0 > /dev/null;
+	to=$(OUTPUT)/output \
+	type=auto \
+	minper=25 \
+	maxper=75 > /dev/null;
 	catlab from=$(OUTPUT)/output.IMG \
 	to=$(OUTPUT)/output.pvl > /dev/null;
 	pds2isis from=$(OUTPUT)/output.IMG \
