--- a/isis/src/messenger/apps/mdiscal/tsts/darkanalysis/Makefile
+++ b/isis/src/messenger/apps/mdiscal/tsts/darkanalysis/Makefile
@@ -6,11 +6,13 @@ darkanalysis.pvl.IGNORELINES = ProcessDate Bytes
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/EN0210557780M.cub \
-	FLATFIELD=false RADIOMETRIC=false \
+	$(APPNAME) \
+	FROM=$(INPUT)/EN0210557780M.cub \
+	FLATFIELD=false \
+	RADIOMETRIC=false \
 	TO=$(OUTPUT)/darkanalysis.cub \
 	> /dev/null;
 
 	catlab FROM=$(OUTPUT)/darkanalysis.cub \
-	   | sed 's/\([0-9][0-9]*\.[0-9]\{10\}\)\([0-9][0-9]*\)/\1/g' \
+	   | $(SED) 's/\([0-9][0-9]*\.[0-9]\{10\}\)\([0-9][0-9]*\)/\1/g' \
 	   > $(OUTPUT)/darkanalysis.pvl
