PROG: Updated mdiscal appTest Makefiles. MAC OS's use an old version of bash and didn't recognize the command '&>>', so it was replaced with '2>>'. References #2332 #2338
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6373 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdiscal/tsts/errors/Makefile
+++ b/isis/src/messenger/apps/mdiscal/tsts/errors/Makefile
@@ -6,20 +6,28 @@ commands:
 	# multiband input cube
 	if [[ `$(APPNAME) \
 	  from=$(INPUT)/multiband.cub \
-	  to=$(OUTPUT)/multiband.cub 2>> $(OUTPUT)/errors_temp.txt` ]]; \
+	  to=$(OUTPUT)/multiband.cub \
+	  2> $(OUTPUT)/errors_temp.txt \
+	  > /dev/null` ]]; \
 	then true; \
 	fi;
 	# samples < 3
 	if [[ `$(APPNAME) \
 	  from=$(INPUT)/samps.cub \
-	  to=$(OUTPUT)/samps.cub &>> $(OUTPUT)/errors_temp.txt` ]]; \
+	  to=$(OUTPUT)/samps.cub \
+	  2>> $(OUTPUT)/errors_temp.txt \
+	  > /dev/null` ]]; \
 	then true; \
 	fi;
 	# Unlutted = false
 	if [[ `$(APPNAME) \
 	  from=$(INPUT)/lutted.cub \
-	  to=$(OUTPUT)/lutted.cub &>> $(OUTPUT)/errors_temp.txt` ]]; \
+	  to=$(OUTPUT)/lutted.cub \
+	  2>> $(OUTPUT)/errors_temp.txt \
+	  > /dev/null` ]]; \
 	then true; \
 	fi;
-	$(SED) 's+\[.*/input/+\[input/+' $(OUTPUT)/errors_temp.txt > $(OUTPUT)/errors.txt;
+
+	$(SED) 's+\[.*/input/+\[input/+' $(OUTPUT)/errors_temp.txt \
+	&> $(OUTPUT)/errors.txt;
 	$(RM) $(OUTPUT)/errors_temp.txt;
