Hist app now displays correct number of user entered bins when min/max values also entered.Ref(#2188)
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6379 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnethist/tsts/case01/Makefile
+++ b/isis/src/control/apps/cnethist/tsts/case01/Makefile
@@ -3,16 +3,16 @@ APPNAME = cnethist
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(CP) $(INPUT)/*.net $(OUTPUT) > /dev/null;
-	$(LS)  $(OUTPUT)/*jigged.net > $(OUTPUT)/net.lis;
-	$(LS)  $(OUTPUT)/*Chen.net >> $(OUTPUT)/net.lis;
-        #this last network has no residual data and was added to test the error message
-	$(LS)  $(OUTPUT)/*autoseed*.net >> $(OUTPUT)/net.lis;
+	$(CP) $(INPUT)/*.pvl $(OUTPUT) > /dev/null;
+	$(LS)  $(OUTPUT)/*jigged.pvl > $(OUTPUT)/net.lis;
+	$(LS)  $(OUTPUT)/*Chen.pvl >> $(OUTPUT)/net.lis;
+	#this last network has no residual data and was added to test the error message
+	$(LS)  $(OUTPUT)/*autoseed*.pvl >> $(OUTPUT)/net.lis;
 	$(APPNAME) clist=$(OUTPUT)/net.lis \
 	to=hist.txt \
 	bin_width = 0.1 >& $(OUTPUT)/temp.txt;
 	cat $(OUTPUT)/temp.txt | grep -v "Processed" | grep -v "Loading Control Points" \
-		| grep -v "Program" > $(OUTPUT)/error.txt;
+		| grep -v "Program" > $(OUTPUT)/error.pvl;
 	cat hist.txt  \
 	  | sed 's/\/[^,]*\/\([^,\/]*\.net\)/\1/g' \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
@@ -22,7 +22,9 @@ commands:
 	# 2. remove net filename paths
 	# 3. remove digits beyond the fifth decimal place of decimal numbers
 	# 4. remove date and time
-	$(RM) $(OUTPUT)/*.net > /dev/null;
+	$(RM) $(OUTPUT)/*jigged.pvl > /dev/null;
+	$(RM) $(OUTPUT)/*Chen.pvl > /dev/null;
+	$(RM) $(OUTPUT)/*autoseed*.pvl > /dev/null;
 	$(RM) $(OUTPUT)/*.lis > /dev/null;
 	$(RM) $(OUTPUT)/temp.txt > /dev/null;
 	$(RM) hist.txt > /dev/null;
