PROG fixed the Makefile for isis2fits infoAll test (Ref#2272)
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6383 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isis2fits/tsts/infoAll/Makefile
+++ b/isis/src/base/apps/isis2fits/tsts/infoAll/Makefile
@@ -8,10 +8,10 @@ commands:
 	$(APPNAME) FROM=$(INPUT)/skymapTruth.cub \
 	  TO=$(OUTPUT)/truth.fits \
 	  BITTYPE=32BIT \
-	  INFO=ALL;
+	  INFO=ALL > /dev/null;
 	raw2isis FROM=$(OUTPUT)/truth.fits \
 	  TO=$(OUTPUT)/truth.cub \
 	  SAMPLES=90 LINES=14 BANDS=1 \
-	  SKIP=2880 BITTYPE=REAL BYTEORDER=LSB;
+	  SKIP=2880 BITTYPE=REAL BYTEORDER=LSB > /dev/null;
 	dd bs=2880 count=1 if=$(OUTPUT)/truth.fits > $(OUTPUT)/labels.txt 2> /dev/null;
-	$(RM) $(OUTPUT)/truth.fits; > /dev/null;
+	$(RM) $(OUTPUT)/truth.fits;
