Stretch parameters added to hideal2pds. References #1761.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6425 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hideal2pds/tsts/croppedAlphaCube/Makefile
+++ b/isis/src/mro/apps/hideal2pds/tsts/croppedAlphaCube/Makefile
@@ -20,7 +20,8 @@ commands:
 	$(APPNAME) FROM=$(INPUT)/input.cub \
 	  to=$(OUTPUT)/output.img \
 	  rationale_desc="user entered" \
-	  version="2.0" > /dev/null;
+	  version="2.0" type=automatic \
+	  minper=.5 maxper=99.5 > /dev/null;
 	pds2hideal from=$(OUTPUT)/output.lbl \
 	  to=$(OUTPUT)/hideal2pds2hideal.cub > /dev/null;
 	tabledump from=$(OUTPUT)/hideal2pds2hideal.cub \
