PROG: made some changes and added documentation to pvlFix test (Ref. #2344)
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6442 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/galileo/apps/gllssi2isis/tsts/pvlFix/Makefile
+++ b/isis/src/galileo/apps/gllssi2isis/tsts/pvlFix/Makefile
@@ -3,6 +3,6 @@ APPNAME = gllssi2isis
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/4911s.lbl \
+	$(APPNAME) FROM=$(INPUT)/4911s.pvl \
 	TO=$(OUTPUT)/4911s.cub > /dev/null;
-	catlab FROM=$(OUTPUT)/4911s.cub to=$(OUTPUT)/4911s.txt > /dev/null;
+	catlab FROM=$(OUTPUT)/4911s.cub to=$(OUTPUT)/4911s.pvl > /dev/null;
