PROG: Improved deltack per coding standards. This change merged from IPCE branch.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6473 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/deltack/tsts/hist/Makefile
+++ b/isis/src/control/apps/deltack/tsts/hist/Makefile
@@ -1,16 +1,17 @@
+# 2014-07-23 JWB - Removed extraneous "\"s
 APPNAME  = deltack
 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(CP) $(INPUT)/*.cub $(OUTPUT);              \
-	$(APPNAME) from=$(OUTPUT)/vik.cub            \
-	  twist=false                                \
-	  maxit=10                                   \
-	  samp1=731.875                              \
-	  line1=669.375                              \
-	  lat1=-26.439008370134                      \
-	  lon1= 352.19745020451 > /dev/null;         \
+	$(CP) $(INPUT)/*.cub $(OUTPUT);
+	$(APPNAME) from=$(OUTPUT)/vik.cub \
+	  twist=false                     \
+	  maxit=10                        \
+	  samp1=731.875                   \
+	  line1=669.375                   \
+	  lat1=-26.439008370134           \
+	  lon1= 352.19745020451 > /dev/null;         
 	cathist from=$(OUTPUT)/vik.cub > $(OUTPUT)/pvlTruth.pvl;
 	$(RM) bundleout.txt > /dev/null; 
 	$(RM) residuals.csv > /dev/null; 
