PROG: Fixed bugs in deltack appTest Makefiles.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6476 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/deltack/tsts/twist/Makefile
+++ b/isis/src/control/apps/deltack/tsts/twist/Makefile
@@ -1,5 +1,5 @@
 #This file tests the twist (2-point) option
-#	tol=0.4194172 \
+#	tol=0.4194172
 APPNAME = deltack
 
 include $(ISISROOT)/make/isismake.tsts
